--- a/roles/hashistack_config/tasks/main.yaml
+++ b/roles/hashistack_config/tasks/main.yaml
@@ -8,6 +8,7 @@
 - name: join consul cluster
   shell: consul join {{ hostvars[item]['ansible_default_ipv4']['address'] }}:8301
   with_items: "{{ play_hosts }}"
+  run_once: true
 
 - name: setup vault templates
   template: src="{{ item }}" dest="/etc/nomad.d"
