--- a/roles/hashistack_config/tasks/main.yaml
+++ b/roles/hashistack_config/tasks/main.yaml
@@ -13,7 +13,7 @@
     - /opt/nomad/data
 
 - name: setup consul templates
-  template: src="consul/{{ item }}" dest="/etc/nomad.d"
+  template: src="consul/{{ item }}" dest="/etc/consul.d"
   notify: restart consul
   with_items:
     - consul-default.json
@@ -25,7 +25,7 @@
   run_once: true
 
 - name: setup vault templates
-  template: src="vault/{{ item }}" dest="/etc/nomad.d"
+  template: src="vault/{{ item }}" dest="/etc/vault.d"
   notify: restart vault
   with_items:
     - vault-consul.hcl
