--- a/roles/hashistack_config/handlers/main.yaml
+++ b/roles/hashistack_config/handlers/main.yaml
@@ -4,5 +4,8 @@
 - name: restart consul
   service: name=consul state=restarted
 
+- name: reload consul
+  shell: /usr/local/bin/consul reload
+
 - name: restart vault
   service: name=vault state=restarted
