--- a/roles/hashistack_config/tasks/main.yaml
+++ b/roles/hashistack_config/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: setup consul templates
   template: src="consul/{{ item }}" dest="/etc/consul.d"
-  notify: restart consul
+  notify: reload consul
   with_items:
     - consul-default.json
     - consul-server.json
@@ -15,7 +15,6 @@
 - name: Wait 300 seconds for port 8301 to become open on the host, don't start checking for 10 seconds
   wait_for:
     port: 8301
-    delay: 10
 
 - name: join consul cluster
   shell: /usr/local/bin/consul join {{ hostvars[item]['ansible_default_ipv4']['address'] }}:8301
