trying to restart node and beat the ASG clock

--- a/roles/hashistack_config/tasks/main.yaml
+++ b/roles/hashistack_config/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: setup consul templates
   template: src="consul/{{ item }}" dest="/etc/consul.d"
-  notify: reload consul
+  notify: restart consul
   with_items:
     - consul-default.json
     - consul-server.json
