--- a/roles/hashistack_config/handlers/main.yaml
+++ b/roles/hashistack_config/handlers/main.yaml
@@ -3,6 +3,7 @@
 
 - name: restart consul
   service: name=consul state=restarted
+  serial: 1
 
 - name: reload consul
   shell: /usr/local/bin/consul reload
